--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
     <div class="row" id="formulario">
       <div class="col-3"></div>
       <div class="col-6">
-          <p>Contáctanos</p>
+          <p class="password-t">Contáctanos</p>
           <form>
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputEmail1" class="password">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
+                <label for="exampleInputPassword1" class="password">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
               <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                <label class="form-check-label" for="exampleCheck1" class="password">Remember me</label>
               </div>
               <button type="submit" class="btn btn-primary">Submit</button>
           </form>
