--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="row" id="formulario">
       <div class="col-3"></div>
       <div class="col-6">
-          <p class="password-t">Contáctanos</p>
+          <h5 class="password-t">Contáctanos</h5>
           <form>
               <div class="form-group">
                 <label for="exampleInputEmail1" class="password">Email address</label>
